--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ server.error.whitelabel.enabled=true
 ########################################################################
 ### Debug #############################################################
 # debug aktif etmek
-debug=true
+# debug=true
 
 ########################################################################
 ### Log ####################################################################
@@ -42,14 +42,14 @@ logging.level.root=INFO
 ### Context  #############################################################
 ##localhost:8080/java
 # server.servlet.context-path=/java
-server.servlet.context-parameters.benimsifrem=123456
+# server.servlet.context-parameters.benimsifrem=123456
 
 ########################################################################
 ### DevTools #############################################################
 # DevTool restart Enable
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
-spring.devtools.livereload.port=35729
+# spring.devtools.restart.enabled=true
+# spring.devtools.livereload.enabled=true
+# spring.devtools.livereload.port=35729
 #uzaktan yonetmek
 
 ########################################################################
@@ -71,8 +71,8 @@ springdoc.api-docs.path=/api-docs
 
 ########################################################################
 ### Prometheus: Monitoring   #####################################################
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+# management.endpoints.web.exposure.include=*
+# management.endpoint.health.show-details=always
 
 ########################################################################
 ### Profiles #############################################################
@@ -101,7 +101,7 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 #jwt.expire.time=86400000
 #jwt.token.prefix=Bearer
 #jwt.header.string=Authorization
-jwt.secret=hamitmizrak
+# jwt.secret=hamitmizrak
 
 ########################################################################
 ### Database  #############################################################
