--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ logging.file.name=./log/blog.log
 # OFF > FATAL > ERROR > WARN > INFO > DEBUG > TRACE
 logging.level.root=INFO
 
-# Günlük dosyas?n?n konumunu yap?land?r?r.
+# Günlük dosyasini konumunu yapilandir
 # logging.file.path=./
 
 ########################################################################
