Login Register Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -133,8 +133,8 @@ spring.jpa.hibernate.ddl-auto = update
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 #spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:file:./memory_persist/denemedb
-###spring.datasource.url=jdbc:h2:file:./memory_persist/denemedb;useSSL=falseDB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+#spring.datasource.url=jdbc:h2:file:./memory_persist/turkcell_fullstack
+###spring.datasource.url=jdbc:h2:file:./memory_persist/turkcell_fullstack;useSSL=falseDB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 #spring.datasource.username=root
 #spring.datasource.password=root
 
@@ -146,11 +146,11 @@ spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 ## Mysql
-##CREATE SCHEMA `employee_management_system` DEFAULT CHARACTER SET utf8 COLLATE utf8_turkish_ci ;
+##CREATE SCHEMA `turkcell_fullstack` DEFAULT CHARACTER SET utf8 COLLATE utf8_turkish_ci ;
 ## use employee_management_system;
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/turkcell_fullstack?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
