--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,13 @@ server.port=8080
 # uygulama adini degistirmek
 # spring.application.name=proje_adi
 
-# Uygulamanin yönetici özelliklerini etkinle?tirmek için kullanilir
+# Uygulamanin y\uFFFDnetici \uFFFDzelliklerini etkinle?tirmek i\uFFFDin kullanilir
 # spring.application.admin.enabled=true
 
-## Sunucunun ba?lanmas? gereken a? adresini ayarlamak için kullan?l?r.
+## Sunucunun ba?lanmas? gereken a? adresini ayarlamak i\uFFFDin kullan?l?r.
 ## http://127.1.1.1:8080/actuator
 # server.address=127.0.0.0
-# Çok parçal? yüklemelerin desteklenmesini sa?lamak için kullan?l?r.
+# \uFFFDok par\uFFFDal? y\uFFFDklemelerin desteklenmesini sa?lamak i\uFFFDin kullan?l?r.
 
 ########################################################################
 ### White label  #############################################################
@@ -35,7 +35,7 @@ logging.file.name=./log/blog.log
 # OFF > FATAL > ERROR > WARN > INFO > DEBUG > TRACE
 logging.level.root=INFO
 
-# Günlük dosyasini konumunu yapilandir
+# G\uFFFDnl\uFFFDk dosyasini konumunu yapilandir
 # logging.file.path=./
 
 ########################################################################
@@ -81,13 +81,13 @@ springdoc.api-docs.path=/api-docs
 
 ########################################################################
 ### Mail #############################################################
-# Varsayilan MimeMessage kodlamasiniayarlamak için kullanilir
+# Varsayilan MimeMessage kodlamasiniayarlamak i\uFFFDin kullanilir
 spring.mail.default-encoding=UTF-8
 #  Mail serverin adresi
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=hrpmuhendislik44@gmail.com
-spring.mail.password=bovxloignczcksqq
+spring.mail.password=gkoerkwnwnyxxtku
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
